new branch contents

--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
-<<!DOCTYPE html>
 <html>
   <head>
     <title>Test</title>
   </head>
   <body>
-    test
+    Here is the new branch contents.
   </body>
 </html>
